--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
     async function selectRandomNumbers() {
         try {
-            const availableRes = await fetch('https://rifa-miguel.onrender.com/available_numbers', {
+            const availableRes = await fetch('https,UAhttps://rifa-miguel.onrender.com/available_numbers', {
                 method: 'GET',
                 headers: { 'Content-Type': 'application/json' },
             });
@@ -317,7 +317,7 @@
 
         while (retries < maxRetries) {
             try {
-                console.log(`Tentativa ${retries + 1} de enviar pagamento at ${new Date().toISOString()}...`);
+                console.log(`Tentativa ${retries + 1} de enviar pagamento at ${new Date().toISOString()}...`, data);
                 const controller = new AbortController();
                 const timeoutId = setTimeout(() => controller.abort(), 10000);
                 const response = await fetch('https://rifa-miguel.onrender.com/create_preference', {
@@ -337,14 +337,15 @@
                 if (responseData.init_point) {
                     window.location.href = responseData.init_point;
                 } else {
-                    alert(responseData.error || 'Erro ao criar o pagamento. Tente novamente.');
+                    console.error('No init_point in response:', responseData);
+                    alert(`Erro ao criar o pagamento: ${responseData.error || 'Resposta inválida do servidor.'}`);
                 }
                 return;
             } catch (error) {
                 console.error(`Erro na tentativa ${retries + 1} at ${new Date().toISOString()}:`, error.message, 'Stack:', error.stack, 'Code:', error.code);
                 retries++;
                 if (retries === maxRetries) {
-                    alert('Erro ao conectar ao servidor após várias tentativas. Detalhes: ' + error.message + '\nCódigo: ' + (error.code || 'unknown') + '\nStatus: ' + (error.status || 'unknown'));
+                    alert('Erro ao conectar ao servidor após várias tentativas. Por favor, contate o suporte via WhatsApp: +65 98473-9520.');
                 } else {
                     await new Promise(resolve => setTimeout(resolve, 3000));
                 }
@@ -359,10 +360,7 @@
         const buyerPhone = document.getElementById('buyer-phone').value;
         const quantity = selectedNumbers.length;
 
-        console.log('Selected numbers before submit at:', new ACNDate().toISOString(), selectedNumbers);
-        if (selectedNumbers.length === 0) {
-            console.warn('No numbers selected before submit at:', new Date().toISOString());
-        }
+        console.log('Selected numbers before submit at:', new Date().toISOString(), selectedNumbers);
 
         if (quantity === 0) {
             alert('Por favor, selecione pelo menos um número.');
