--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
     async function selectRandomNumbers() {
         try {
-            const availableRes = await fetch('https,UAhttps://rifa-miguel.onrender.com/available_numbers', {
+            const availableRes = await fetch('https://rifa-miguel.onrender.com/available_numbers', {
                 method: 'GET',
                 headers: { 'Content-Type': 'application/json' },
             });
@@ -226,12 +226,12 @@
 
         while (retries < maxRetries) {
             try {
-                console.log(`Tentativa ${retries + 1} de carregar números at ${new Date().toISOString()}...`);
+                console.log(`Tentativa ${retries + 1} de carregar números em ${new Date().toISOString()}...`);
                 const availableRes = await fetch('https://rifa-miguel.onrender.com/available_numbers', {
                     method: 'GET',
                     headers: { 'Content-Type': 'application/json' },
                 });
-                if (!availableRes.ok) throw new Error(`HTTP error: ${availableRes.status}`);
+                if (!availableRes.ok) throw new Error(`Erro HTTP: ${availableRes.status}`);
                 const availableNumbers = await availableRes.json();
 
                 numberContainer.innerHTML = '';
@@ -253,7 +253,7 @@
                                     const index = selectedNumbers.indexOf(num);
                                     if (index > -1) selectedNumbers.splice(index, 1);
                                 }
-                                console.log('Selected numbers updated at:', new Date().toISOString(), selectedNumbers);
+                                console.log('Números selecionados atualizados em:', new Date().toISOString(), selectedNumbers);
                                 document.getElementById('selected-numbers').textContent = selectedNumbers.length > 0 ? selectedNumbers.join(', ') : 'Nenhum';
                                 document.getElementById('total-price').textContent = selectedNumbers.length * pricePerNumber;
                             }
@@ -267,16 +267,16 @@
                     method: 'GET',
                     headers: { 'Content-Type': 'application/json' },
                 });
-                if (!progressRes.ok) throw new Error(`HTTP error: ${progressRes.status}`);
+                if (!progressRes.ok) throw new Error(`Erro HTTP: ${progressRes.status}`);
                 const { progress } = await progressRes.json();
                 const progressBar = document.getElementById('progress-bar');
                 progressBar.style.width = `${progress}%`;
                 progressBar.textContent = `${progress}% Arrecadado`;
 
-                console.log('Números carregados com sucesso at:', new Date().toISOString());
+                console.log('Números carregados com sucesso em:', new Date().toISOString());
                 return;
             } catch (error) {
-                console.error(`Erro na tentativa ${retries + 1} at ${new Date().toISOString()}:`, error.message, 'Stack:', error.stack);
+                console.error(`Erro na tentativa ${retries + 1} em ${new Date().toISOString()}:`, error.message, 'Stack:', error.stack);
                 retries++;
                 if (retries === maxRetries) {
                     console.warn('Máximo de tentativas atingido, usando fallback...');
@@ -294,7 +294,7 @@
                                 const index = selectedNumbers.indexOf(num);
                                 if (index > -1) selectedNumbers.splice(index, 1);
                             }
-                            console.log('Selected numbers updated (fallback) at:', new Date().toISOString(), selectedNumbers);
+                            console.log('Números selecionados atualizados (fallback) em:', new Date().toISOString(), selectedNumbers);
                             document.getElementById('selected-numbers').textContent = selectedNumbers.length > 0 ? selectedNumbers.join(', ') : 'Nenhum';
                             document.getElementById('total-price').textContent = selectedNumbers.length * pricePerNumber;
                         });
@@ -317,7 +317,7 @@
 
         while (retries < maxRetries) {
             try {
-                console.log(`Tentativa ${retries + 1} de enviar pagamento at ${new Date().toISOString()}...`, data);
+                console.log(`Tentativa ${retries + 1} de enviar pagamento em ${new Date().toISOString()}...`, data);
                 const controller = new AbortController();
                 const timeoutId = setTimeout(() => controller.abort(), 10000);
                 const response = await fetch('https://rifa-miguel.onrender.com/create_preference', {
@@ -330,22 +330,21 @@
                 });
 
                 clearTimeout(timeoutId);
-                console.log(`Response status: ${response.status} at ${new Date().toISOString()}`);
+                console.log(`Status da resposta: ${response.status} em ${new Date().toISOString()}`);
                 const responseData = await response.json();
-                console.log('API response:', responseData);
+                console.log('Resposta da API:', responseData);
 
                 if (responseData.init_point) {
                     window.location.href = responseData.init_point;
                 } else {
-                    console.error('No init_point in response:', responseData);
-                    alert(`Erro ao criar o pagamento: ${responseData.error || 'Resposta inválida do servidor.'}`);
+                    alert(responseData.error || 'Erro ao criar o pagamento. Tente novamente.');
                 }
                 return;
             } catch (error) {
-                console.error(`Erro na tentativa ${retries + 1} at ${new Date().toISOString()}:`, error.message, 'Stack:', error.stack, 'Code:', error.code);
+                console.error(`Erro na tentativa ${retries + 1} em ${new Date().toISOString()}:`, error.message, 'Stack:', error.stack, 'Code:', error.code);
                 retries++;
                 if (retries === maxRetries) {
-                    alert('Erro ao conectar ao servidor após várias tentativas. Por favor, contate o suporte via WhatsApp: +65 98473-9520.');
+                    alert('Erro ao conectar ao servidor após várias tentativas. Detalhes: ' + error.message + '\nCódigo: ' + (error.code || 'desconhecido') + '\nStatus: ' + (error.status || 'desconhecido'));
                 } else {
                     await new Promise(resolve => setTimeout(resolve, 3000));
                 }
@@ -360,7 +359,10 @@
         const buyerPhone = document.getElementById('buyer-phone').value;
         const quantity = selectedNumbers.length;
 
-        console.log('Selected numbers before submit at:', new Date().toISOString(), selectedNumbers);
+        console.log('Números selecionados antes de enviar em:', new Date().toISOString(), selectedNumbers);
+        if (selectedNumbers.length === 0) {
+            console.warn('Nenhum número selecionado antes de enviar em:', new Date().toISOString());
+        }
 
         if (quantity === 0) {
             alert('Por favor, selecione pelo menos um número.');
@@ -377,7 +379,7 @@
             buyerPhone,
             numbers: selectedNumbers
         };
-        console.log('Sending payment request with at:', new Date().toISOString(), paymentData);
+        console.log('Enviando solicitação de pagamento em:', new Date().toISOString(), paymentData);
 
         await sendPaymentRequest(paymentData);
     });
