--- a/index.html
+++ b/index.html
@@ -173,12 +173,31 @@
         document.getElementById('numbers').scrollIntoView({ behavior: 'smooth' });
     }
 
-    function checkPassword() {
+    async function checkPassword() {
         const password = prompt("Digite a senha para acessar a página de sorteio:");
-        if (password === "VAIDACERTO") {
-            window.location.href = "/rifa-miguel/sorteio.html";
-        } else {
-            alert("Senha incorreta!");
+        if (!password) {
+            alert("Por favor, digite uma senha.");
+            return;
+        }
+
+        try {
+            const response = await fetch('https://rifa-miguel.onrender.com/verify_password', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ password })
+            });
+
+            if (!response.ok) throw new Error(`Erro HTTP: ${response.status}`);
+            const result = await response.json();
+
+            if (result.valid) {
+                window.location.href = "/rifa-miguel/sorteio.html";
+            } else {
+                alert("Senha incorreta!");
+            }
+        } catch (error) {
+            console.error('Erro ao verificar senha:', error);
+            alert('Erro ao conectar ao servidor. Tente novamente.');
         }
     }
 
