--- a/sobre-estrabismo.html
+++ b/sobre-estrabismo.html
@@ -84,6 +84,10 @@
         </nav>
     </header>
 
+    <section style="text-align: center; margin: 20px 0;">
+        <img src="imagens/miguel.jpg" alt="Foto do Miguel" style="max-width: 100%; height: auto; border-radius: 10px;">
+    </section>
+
     <section class="content">
         <h2>Entenda o Estrabismo e a Urgência da Cirurgia para o Miguel</h2>
         <p>O estrabismo é uma condição em que os olhos não estão alinhados corretamente. Enquanto um olho foca em um objeto, o outro pode desviar para dentro, para fora, para cima ou para baixo. Essa falta de alinhamento pode parecer apenas uma questão estética, mas seus impactos vão muito além, especialmente para uma criança como o Miguel, que está com 4 anos.</p>
@@ -110,6 +114,7 @@
         </ul>
 
         <h3>Curiosidades sobre o Estrabismo</h3>
+        <ul>
             <li><strong>É mais comum do que parece</strong>: O estrabismo afeta cerca de 4% das crianças no Brasil, mas muitas vezes é subdiagnosticado.</li>
             <li><strong>Não é só genético</strong>: Embora a hereditariedade seja um fator, o estrabismo pode surgir por problemas como nascimento prematuro, lesões ou outras condições de saúde.</li>
             <li><strong>Tratamento além da cirurgia</strong>: Após a cirurgia, o Miguel pode precisar de óculos ou terapia visual para reforçar os resultados, mas a cirurgia é o primeiro passo crucial.</li>
