--- a/sucesso.html
+++ b/sucesso.html
@@ -2,11 +2,121 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>Pagamento Concluído</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pagamento Confirmado - Rifa Solidária para o Miguel</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+            text-align: center;
+        }
+        header {
+            background-color: #007bff;
+            color: white;
+            padding: 10px 20px;
+            text-align: center;
+        }
+        nav a {
+            color: white;
+            margin: 0 15px;
+            text-decoration: none;
+        }
+        .success-container {
+            max-width: 600px;
+            margin: 40px auto;
+            padding: 20px;
+            background-color: white;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+        .success-container h2 {
+            color: #28a745;
+        }
+        .share-button {
+            background-color: #25d366;
+            color: white;
+            padding: 12px 24px;
+            border: none;
+            border-radius: 5px;
+            text-decoration: none;
+            display: inline-block;
+            font-weight: bold;
+            transition: background-color 0.3s;
+            margin-top: 20px;
+        }
+        .share-button:hover {
+            background-color: #1ebe5a;
+        }
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 10px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
-    <h1>Pagamento Concluído!</h1>
-    <p>Obrigado por apoiar o Miguel! Você será contatado em breve.</p>
-    <a href="/">Voltar ao início</a>
+    <header>
+        <h1>Rifa Solidária para o Miguel</h1>
+        <nav>
+            <a href="/rifa-miguel/index.html">Início</a>
+            <a href="/rifa-miguel/como-funciona.html">Como Funciona</a>
+            <a href="/rifa-miguel/sobre-estrabismo.html">Sobre o Estrabismo</a>
+            <a href="/rifa-miguel/orcamento.html">Orçamento</a>
+            <a href="javascript:void(0)" onclick="checkPassword()">Sorteio</a>
+            <a href="#contato">Contato</a>
+        </nav>
+    </header>
+
+    <section class="success-container">
+        <h2>Pagamento Confirmado!</h2>
+        <p>Obrigado por sua contribuição para a Rifa Solidária do Miguel! Sua participação está ajudando o Miguel a realizar a cirurgia de estrabismo e enxergar o mundo com mais clareza.</p>
+        <p>Que tal compartilhar a rifa com seus amigos e familiares? Quanto mais pessoas participarem, mais rápido alcançaremos nossa meta!</p>
+        <a href="https://wa.me/?text=Ajude%20o%20Miguel%20a%20enxergar%20melhor!%20Participe%20da%20Rifa%20Solidária%20por%20apenas%20R$10%20e%20concorra%20a%20R$1.500:%20https://ederamorimth.github.io/rifa-miguel/%20%0AContato:%20+65984739520%20ou%20+65999731992" class="share-button">Compartilhar no WhatsApp</a>
+    </section>
+
+    <footer id="contato">
+        <p>Contato:</p>
+        <p>Evelyn Mãe do Miguel: <a href="https://wa.me/65984739520">+65 98473-9520</a></p>
+        <p>Eder Pai do Miguel: <a href="https://wa.me/65999731992">+65 99973-1992</a></p>
+        <p>Para dúvidas, entre em contato via WhatsApp!</p>
+        <p>© 2025 Rifa Solidária para o Miguel</p>
+    </footer>
+
+    <script>
+        async function checkPassword() {
+            const password = prompt("Digite a senha para acessar a página de sorteio:");
+            if (!password) {
+                alert("Por favor, digite uma senha.");
+                return;
+            }
+
+            try {
+                const response = await fetch('https://rifa-miguel.onrender.com/verify_password', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ password })
+                });
+
+                if (!response.ok) throw new Error(`Erro HTTP: ${response.status}`);
+                const result = await response.json();
+
+                if (result.valid) {
+                    window.location.href = "/rifa-miguel/sorteio.html";
+                } else {
+                    alert("Senha incorreta!");
+                }
+            } catch (error) {
+                console.error('Erro ao verificar senha:', error);
+                alert('Erro ao conectar ao servidor. Tente novamente.');
+            }
+        }
+    </script>
 </body>
 </html>
