--- a/erro.html
+++ b/erro.html
@@ -2,11 +2,105 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>Erro no Pagamento</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Erro no Pagamento - Rifa Solidária para o Miguel</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+            text-align: center;
+        }
+        header {
+            background-color: #007bff;
+            color: white;
+            padding: 10px 20px;
+            text-align: center;
+        }
+        nav a {
+            color: white;
+            margin: 0 15px;
+            text-decoration: none;
+        }
+        .error-container {
+            max-width: 600px;
+            margin: 40px auto;
+            padding: 20px;
+            background-color: white;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+        .error-container h2 {
+            color: #dc3545;
+        }
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 10px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
-    <h1>Erro no Pagamento</h1>
-    <p>Algo deu errado. Tente novamente ou entre em contato.</p>
-    <a href="/">Voltar ao início</a>
+    <header>
+        <h1>Rifa Solidária para o Miguel</h1>
+        <nav>
+            <a href="/rifa-miguel/index.html">Início</a>
+            <a href="/rifa-miguel/como-funciona.html">Como Funciona</a>
+            <a href="/rifa-miguel/sobre-estrabismo.html">Sobre o Estrabismo</a>
+            <a href="/rifa-miguel/orcamento.html">Orçamento</a>
+            <a href="javascript:void(0)" onclick="checkPassword()">Sorteio</a>
+            <a href="#contato">Contato</a>
+        </nav>
+    </header>
+
+    <section class="error-container">
+        <h2>Erro no Pagamento</h2>
+        <p>Ocorreu um erro ao processar seu pagamento. Por favor, tente novamente ou entre em contato conosco para assistência.</p>
+        <p><a href="/rifa-miguel/index.html">Voltar à página inicial</a></p>
+    </section>
+
+    <footer id="contato">
+        <p>Contato:</p>
+        <p>Evelyn Mãe do Miguel: <a href="https://wa.me/65984739520">+65 98473-9520</a></p>
+        <p>Eder Pai do Miguel: <a href="https://wa.me/65999731992">+65 99973-1992</a></p>
+        <p>Para dúvidas, entre em contato via WhatsApp!</p>
+        <p>© 2025 Rifa Solidária para o Miguel</p>
+    </footer>
+
+    <script>
+        async function checkPassword() {
+            const password = prompt("Digite a senha para acessar a página de sorteio:");
+            if (!password) {
+                alert("Por favor, digite uma senha.");
+                return;
+            }
+
+            try {
+                const response = await fetch('https://rifa-miguel.onrender.com/verify_password', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ password })
+                });
+
+                if (!response.ok) throw new Error(`Erro HTTP: ${response.status}`);
+                const result = await response.json();
+
+                if (result.valid) {
+                    window.location.href = "/rifa-miguel/sorteio.html";
+                } else {
+                    alert("Senha incorreta!");
+                }
+            } catch (error) {
+                console.error('Erro ao verificar senha:', error);
+                alert('Erro ao conectar ao servidor. Tente novamente.');
+            }
+        }
+    </script>
 </body>
 </html>
