--- a/index.html
+++ b/index.html
@@ -116,6 +116,12 @@
             justify-content: center;
             margin-top: 20px;
         }
+        .check-number-container {
+            margin-bottom: 20px;
+        }
+        .check-number-container input {
+            margin-right: 10px;
+        }
     </style>
 </head>
 <body>
@@ -149,6 +155,12 @@
 </section>
 
 <section class="form-container">
+    <div class="check-number-container">
+        <h3>Consultar Número Premiado</h3>
+        <input type="text" id="check-number" placeholder="Digite um número (ex.: 0001)" maxlength="4">
+        <button onclick="checkNumber()">Consultar Número</button>
+        <p id="check-result"></p>
+    </div>
     <h3>Finalize sua compra</h3>
     <form id="payment-form">
         <input type="text" id="buyer-name" placeholder="Nome Completo" required>
@@ -204,6 +216,14 @@
     const numberContainer = document.getElementById('numbers');
     let selectedNumbers = [];
     const pricePerNumber = 10;
+
+    // Carregar dados salvos no localStorage
+    window.onload = function() {
+        const savedName = localStorage.getItem('buyerName');
+        const savedPhone = localStorage.getItem('buyerPhone');
+        if (savedName) document.getElementById('buyer-name').value = savedName;
+        if (savedPhone) document.getElementById('buyer-phone').value = savedPhone;
+    };
 
     async function selectRandomNumbers() {
         try {
@@ -393,6 +413,10 @@
             return;
         }
 
+        // Salvar dados no localStorage
+        localStorage.setItem('buyerName', buyerName);
+        localStorage.setItem('buyerPhone', buyerPhone);
+
         const paymentData = {
             quantity,
             buyerName,
@@ -403,6 +427,55 @@
 
         await sendPaymentRequest(paymentData);
     });
+
+    async function checkNumber() {
+        const numberInput = document.getElementById('check-number').value.trim();
+        const resultDiv = document.getElementById('check-result');
+        resultDiv.textContent = 'Verificando...';
+
+        if (!numberInput || !/^\d{1,4}$/.test(numberInput)) {
+            resultDiv.textContent = 'Por favor, insira um número válido (1 a 1700).';
+            return;
+        }
+
+        const num = String(parseInt(numberInput)).padStart(4, '0');
+
+        try {
+            const availableRes = await fetch('https://rifa-miguel.onrender.com/available_numbers', {
+                method: 'GET',
+                headers: { 'Content-Type': 'application/json' },
+            });
+            if (!availableRes.ok) throw new Error(`Erro HTTP: ${availableRes.status}`);
+            const availableNumbers = await availableRes.json();
+
+            // Lista de números premiados (para teste: 1 e 2 com prêmio "balinha de cereja")
+            const winningNumbers = {
+                '0001': 'balinha de cereja',
+                '0002': 'balinha de cereja'
+            };
+
+            if (availableNumbers.includes(num)) {
+                // Número não comprado
+                if (confirm(`O número ${num} não foi comprado. Deseja comprá-lo por R$ 10? Vai que você tem sorte com ele!`)) {
+                    selectedNumbers = [num];
+                    document.getElementById('selected-numbers').textContent = num;
+                    document.getElementById('total-price').textContent = 10;
+                } else {
+                    resultDiv.textContent = `O número ${num} ainda está disponível para compra!`;
+                }
+            } else {
+                // Número comprado
+                if (winningNumbers[num]) {
+                    resultDiv.innerHTML = `Parabéns! O número ${num} é premiado! Você ganhou uma ${winningNumbers[num]}!`;
+                } else {
+                    resultDiv.textContent = `O número ${num} foi comprado, mas não é premiado. Tente outro!`;
+                }
+            }
+        } catch (error) {
+            console.error('Erro ao consultar número:', error);
+            resultDiv.textContent = 'Erro ao verificar o número. Tente novamente.';
+        }
+    }
 </script>
 
 </body>
