--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
             color: white;
             margin: 0 15px;
             text-decoration: none;
+            font-size: 1.2em;
+            font-weight: bold;
+            letter-spacing: 1px;
+            transition: color 0.3s;
+        }
+        nav a:hover {
+            color: #ffc107;
         }
         .hero {
             text-align: center;
@@ -116,22 +123,6 @@
             justify-content: center;
             margin-top: 20px;
         }
-        .check-number-container {
-            margin-bottom: 20px;
-        }
-        .check-number-container input {
-            margin-right: 10px;
-        }
-        .winners-container {
-            margin: 20px 0;
-            padding: 10px;
-            background-color: #f9f9f9;
-            border-radius: 5px;
-            display: none; /* Inicialmente oculto */
-        }
-        .winner-item {
-            margin: 5px 0;
-        }
     </style>
 </head>
 <body>
@@ -143,6 +134,7 @@
         <a href="/rifa-miguel/como-funciona.html">Como Funciona</a>
         <a href="/rifa-miguel/sobre-estrabismo.html">Sobre o Estrabismo</a>
         <a href="/rifa-miguel/orcamento.html">Orçamento</a>
+        <a href="/rifa-miguel/numero-premiado.html">Número Premiado</a>
         <a href="javascript:void(0)" onclick="checkPassword()">Sorteio</a>
         <a href="#contato">Contato</a>
     </nav>
@@ -165,19 +157,6 @@
 </section>
 
 <section class="form-container">
-    <div class="check-number-container">
-        <h3>Consultar Número Premiado</h3>
-        <p><strong>Como fazer a consulta:</strong> Insira os números que você comprou (separados por vírgula, ex.: 0001, 0002) e o telefone usado na compra. Só você pode verificar seus próprios números!</p>
-        <input type="text" id="check-numbers" placeholder="Números comprados (ex.: 0001, 0002)" maxlength="50">
-        <input type="tel" id="check-phone" placeholder="Telefone usado na compra (ex.: 65984739520)" maxlength="11">
-        <button onclick="checkNumber()">Consultar Número</button>
-        <p id="check-result"></p>
-    </div>
-    <div class="winners-container" id="winners-container">
-        <h3>Ganhadores</h3>
-        <div class="winner-item" id="winner-1"></div>
-        <div class="winner-item" id="winner-2"></div>
-    </div>
     <h3>Finalize sua compra</h3>
     <form id="payment-form">
         <input type="text" id="buyer-name" placeholder="Nome Completo" required>
@@ -444,87 +423,6 @@
 
         await sendPaymentRequest(paymentData);
     });
-
-    function maskPhone(phone) {
-        if (phone && phone.length >= 4) {
-            return 'XXX-' + phone.slice(-4);
-        }
-        return phone;
-    }
-
-    async function checkNumber() {
-        const numbersInput = document.getElementById('check-numbers').value.trim();
-        const phoneInput = document.getElementById('check-phone').value.trim();
-        const resultDiv = document.getElementById('check-result');
-        const winnersContainer = document.getElementById('winners-container');
-        resultDiv.textContent = 'Verificando...';
-
-        if (!numbersInput || !/^\d+(,\s*\d+)*$/.test(numbersInput) || !phoneInput || !/^\d{10,11}$/.test(phoneInput)) {
-            resultDiv.textContent = 'Por favor, insira os números comprados (ex.: 0001, 0002) e um telefone válido (10 ou 11 dígitos).';
-            return;
-        }
-
-        const numbers = numbersInput.split(',').map(num => String(parseInt(num.trim())).padStart(4, '0'));
-        const phone = phoneInput;
-
-        try {
-            const availableRes = await fetch('https://rifa-miguel.onrender.com/available_numbers', {
-                method: 'GET',
-                headers: { 'Content-Type': 'application/json' },
-            });
-            if (!availableRes.ok) throw new Error(`Erro HTTP: ${availableRes.status}`);
-            const availableNumbers = await availableRes.json();
-
-            // Lista de números premiados (para teste: 1 e 2 com prêmio "balinha de cereja")
-            const winningNumbers = {
-                '0001': 'balinha de cereja',
-                '0002': 'balinha de cereja'
-            };
-
-            const purchasedNumbers = numbers.filter(num => !availableNumbers.includes(num));
-            if (purchasedNumbers.length === 0) {
-                resultDiv.textContent = 'Nenhum dos números informados foi comprado.';
-                return;
-            }
-
-            // Verificar se o telefone e números correspondem ao comprador (endpoint fictício)
-            const purchaseRes = await fetch('https://rifa-miguel.onrender.com/check_purchase', {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ numbers: purchasedNumbers, buyerPhone: phone })
-            });
-            if (!purchaseRes.ok) throw new Error(`Erro HTTP: ${purchaseRes.status}`);
-            const purchaseData = await purchaseRes.json();
-
-            if (purchaseData.owned) {
-                let message = '';
-                let hasWinningNumber = false;
-                purchasedNumbers.forEach(num => {
-                    if (winningNumbers[num]) {
-                        message += `Parabéns! O número ${num} é premiado! Você ganhou uma ${winningNumbers[num]}!<br>`;
-                        hasWinningNumber = true;
-                    } else {
-                        message += `O número ${num} foi comprado por você, mas não é premiado.<br>`;
-                    }
-                });
-                resultDiv.innerHTML = message || 'Nenhum prêmio encontrado para seus números.';
-
-                // Exibir ganhadores apenas se houver um número premiado
-                if (hasWinningNumber) {
-                    winnersContainer.style.display = 'block';
-                    document.getElementById('winner-1').textContent = 'João Silva - Prêmio: Balinha de Cereja - Telefone: ' + maskPhone('65984739520');
-                    document.getElementById('winner-2').textContent = 'Maria Oliveira - Prêmio: Balinha de Cereja - Telefone: ' + maskPhone('65999731992');
-                }
-            } else {
-                resultDiv.textContent = 'Os números informados não correspondem ao telefone fornecido. Verifique seus dados.';
-                winnersContainer.style.display = 'none';
-            }
-        } catch (error) {
-            console.error('Erro ao consultar número:', error);
-            resultDiv.textContent = 'Erro ao verificar os números. Tente novamente ou contate o suporte.';
-            winnersContainer.style.display = 'none';
-        }
-    }
 </script>
 
 </body>
