--- a/sorteio.html
+++ b/sorteio.html
@@ -278,7 +278,7 @@
             }
 
             const password = prompt('Digite a senha para ver o telefone do ganhador:');
-            if (password === '') {
+            if (password === 'VAIDACERTO') {
                 alert(`Telefone do ganhador (${currentWinner.buyerName}): ${currentWinner.buyerPhone}`);
             } else {
                 alert('Senha incorreta!');
