--- a/sorteio.html
+++ b/sorteio.html
@@ -270,18 +270,37 @@
             console.log(`Sorteio realizado at ${new Date().toISOString()}: Número ${winningNumber}, Ganhador: ${winner.buyerName}`);
         }
 
-        // Mostrar telefone completo com senha
-        function viewWinnerPhone() {
+        // Mostrar telefone completo com senha do Render
+        async function viewWinnerPhone() {
             if (!currentWinner) {
                 alert('Nenhum ganhador selecionado.');
                 return;
             }
 
             const password = prompt('Digite a senha para ver o telefone do ganhador:');
-            if (password === 'VAIDACERTO') {
-                alert(`Telefone do ganhador (${currentWinner.buyerName}): ${currentWinner.buyerPhone}`);
-            } else {
-                alert('Senha incorreta!');
+            if (!password) {
+                alert('Por favor, digite uma senha.');
+                return;
+            }
+
+            try {
+                const response = await fetch('https://rifa-miguel.onrender.com/verify_password', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ password })
+                });
+
+                if (!response.ok) throw new Error(`Erro HTTP: ${response.status}`);
+                const result = await response.json();
+
+                if (result.valid) {
+                    alert(`Telefone do ganhador (${currentWinner.buyerName}): ${currentWinner.buyerPhone}`);
+                } else {
+                    alert('Senha incorreta!');
+                }
+            } catch (error) {
+                console.error('Erro ao verificar senha:', error);
+                alert('Erro ao conectar ao servidor. Tente novamente.');
             }
         }
 
