--- a/numero-premiado.html
+++ b/numero-premiado.html
@@ -59,6 +59,10 @@
             cursor: pointer;
             width: 100%;
         }
+        .form-container button:disabled {
+            background-color: #ccc;
+            cursor: not-allowed;
+        }
         footer {
             background-color: #333;
             color: white;
@@ -90,10 +94,14 @@
             padding: 10px;
             background-color: #f9f9f9;
             border-radius: 5px;
-            display: none; /* Inicialmente oculto */
+            display: none;
         }
         .winner-item {
             margin: 5px 0;
+        }
+        #check-result.loading {
+            color: #007bff;
+            font-style: italic;
         }
     </style>
 </head>
@@ -122,8 +130,8 @@
         <h3>Consultar Número Premiado</h3>
         <p><strong>Como fazer a consulta:</strong> Insira os números que você comprou (separados por vírgula, ex.: 0123, 0124) e o telefone usado na compra. Só você pode verificar seus próprios números!</p>
         <input type="text" id="check-numbers" placeholder="Números comprados (ex.: 0123, 0124)" maxlength="50">
-        <input type="tel" id="check-phone" placeholder="Telefone usado na compra (ex.: 65984739520)" maxlength="11">
-        <button onclick="checkNumber()">Consultar Número</button>
+        <input type="tel" id="check-phone" placeholder="Telefone usado na compra (ex.: 65984730000)" maxlength="11">
+        <button id="check-button" onclick="checkNumber()">Consultar Número</button>
         <p id="check-result"></p>
         <div class="winners-container" id="winners-container">
             <h3>Ganhadores</h3>
@@ -137,12 +145,12 @@
     <p>Evelyn Mãe do Miguel: <a href="https://wa.me/65984739520">+65 98473-9520</a></p>
     <p>Eder Pai do Miguel: <a href="https://wa.me/65999731992">+65 99973-1992</a></p>
     <p>Para dúvidas, entre em contato via WhatsApp!</p>
-    <p>Compartilhe no WhatsApp: <a href="https://wa.me/?text=Conheça%20a%20causa%20do%20Miguel%20e%20ajude%20na%20rifa%20solidária!%20Saiba%20mais%20sobre%20o%20estrabismo%20e%20participe:%20https://ederamorimth.github.io/rifa-miguel/sobre-estrabismo.html%20%0AContato:%20+65984739520%20ou%20+65999731992" class="share-button">Compartilhar</a></p>
+    <p>Compartilhe no WhatsApp: <a href="https://wa.me/?text=Conheça%20a%20causa%20do%20Miguel%20e%20ajude%20na%20rifa%20solidária!%20Saiba%20mais%20sobre%20o%20estrabismo%20e%20participe:%20https://ederamorimth.github.io/rifa-miguel/sorteio.html%20%0AContato:%20+65984739520%20ou%20+65999731992" class="share-button">Compartilhar</a></p>
     <p>© 2025 Rifa Solidária para o Miguel</p>
 </footer>
 
 <script>
-    function checkPassword() {
+    async function checkPassword() {
         const password = prompt("Digite a senha para acessar a página de sorteio:");
         if (!password) {
             alert("Por favor, digite uma senha.");
@@ -150,14 +158,14 @@
         }
 
         try {
-            const response = fetch('https://rifa-miguel.onrender.com/verify_password', {
+            const response = await fetch('https://rifa-miguel.onrender.com/verify_password', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify({ password })
             });
 
             if (!response.ok) throw new Error(`Erro HTTP: ${response.status}`);
-            const result = response.json();
+            const result = await response.json();
 
             if (result.valid) {
                 window.location.href = "/rifa-miguel/sorteio.html";
@@ -170,10 +178,6 @@
         }
     }
 
-    const numberContainer = document.getElementById('numbers');
-    let selectedNumbers = [];
-    const pricePerNumber = 10;
-
     function maskPhone(phone) {
         if (phone && phone.length >= 4) {
             return 'XXX-' + phone.slice(-4);
@@ -182,16 +186,23 @@
     }
 
     async function checkNumber() {
+        const checkButton = document.getElementById('check-button');
         const numbersInput = document.getElementById('check-numbers').value.trim();
         const phoneInput = document.getElementById('check-phone').value.trim();
         const resultDiv = document.getElementById('check-result');
         const winnersContainer = document.getElementById('winners-container');
         const winnerItem = document.getElementById('winner-1');
+
+        // Desabilitar botão e mostrar "carregando"
+        checkButton.disabled = true;
+        resultDiv.classList.add('loading');
         resultDiv.textContent = 'Verificando...';
-        winnersContainer.style.display = 'none'; // Esconde ganhadores inicialmente
+        winnersContainer.style.display = 'none';
 
         if (!numbersInput || !/^\d+(,\s*\d+)*$/.test(numbersInput) || !phoneInput || !/^\d{10,11}$/.test(phoneInput)) {
             resultDiv.textContent = 'Por favor, insira os números comprados (ex.: 0123, 0124) e um telefone válido (10 ou 11 dígitos).';
+            checkButton.disabled = false;
+            resultDiv.classList.remove('loading');
             return;
         }
 
@@ -203,46 +214,43 @@
                 method: 'GET',
                 headers: { 'Content-Type': 'application/json' },
             });
-            if (!availableRes.ok) throw new Error(`Erro HTTP: ${availableRes.status}`);
+            if (!availableRes.ok) throw new Error(`Erro ao carregar números disponíveis: ${availableRes.status}`);
             const availableNumbers = await availableRes.json();
-
-            // Lista de números premiados (para teste: 0123 e 0124 com prêmio "balinha de cereja")
-            const winningNumbers = {
-                '0123': 'balinha de cereja',
-                '0124': 'balinha de cereja'
-            };
 
             const purchasedNumbers = numbers.filter(num => !availableNumbers.includes(num));
             if (purchasedNumbers.length === 0) {
                 resultDiv.textContent = 'Nenhum dos números informados foi comprado.';
+                checkButton.disabled = false;
+                resultDiv.classList.remove('loading');
                 return;
             }
 
-            // Verificar se o telefone e números correspondem ao comprador (endpoint fictício)
+            // Verificar compra com o backend
             const purchaseRes = await fetch('https://rifa-miguel.onrender.com/check_purchase', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify({ numbers: purchasedNumbers, buyerPhone: phone })
             });
-            if (!purchaseRes.ok) throw new Error(`Erro HTTP: ${purchaseRes.status}`);
+            if (!purchaseRes.ok) throw new Error(`Erro ao verificar compra: ${purchaseRes.status}`);
             const purchaseData = await purchaseRes.json();
 
             if (purchaseData.owned) {
+                // Simulação de números premiados (substitua por dados reais do backend)
+                const winningNumbers = await (await fetch('https://rifa-miguel.onrender.com/winning_numbers')).json();
                 let message = '';
                 let hasWinningNumber = false;
+
                 purchasedNumbers.forEach(num => {
-                    if (winningNumbers[num]) {
-                        message += `Parabéns! O número ${num} é premiado! Você ganhou uma ${winningNumbers[num]}!<br>`;
+                    if (winningNumbers.includes(num)) {
+                        message += `Parabéns! O número ${num} é premiado! Você ganhou um prêmio! 🎉<br>`;
                         hasWinningNumber = true;
-                        // Exibir ganhador atual
-                        winnerItem.textContent = `${localStorage.getItem('buyerName') || 'Anônimo'} - Número: ${num} - Telefone: ${maskPhone(phone)} - Prêmio: ${winningNumbers[num]}`;
+                        winnerItem.textContent = `${document.getElementById('check-numbers').value.split(',')[0]} - Número: ${num} - Telefone: ${maskPhone(phone)} - Prêmio: A definir`;
                     } else {
                         message += `O número ${num} foi comprado por você, mas não é premiado.<br>`;
                     }
                 });
                 resultDiv.innerHTML = message || 'Nenhum prêmio encontrado para seus números.';
 
-                // Exibir ganhadores apenas se houver um número premiado
                 if (hasWinningNumber) {
                     winnersContainer.style.display = 'block';
                 }
@@ -252,8 +260,12 @@
             }
         } catch (error) {
             console.error('Erro ao consultar número:', error);
-            resultDiv.textContent = 'Erro ao verificar os números. Tente novamente ou contate o suporte.';
+            resultDiv.textContent = `Erro ao verificar os números. Tente novamente ou contate o suporte. Detalhe: ${error.message}`;
             winnersContainer.style.display = 'none';
+        } finally {
+            // Reativar botão e remover "carregando"
+            checkButton.disabled = false;
+            resultDiv.classList.remove('loading');
         }
     }
 </script>
